[Win][Clang][WebKitLegacy] error: cannot pass object of non-trivial type through variadic function https://bugs.webkit.org/show_bug.cgi?id=189612

Reviewed by Alex Christensen.

Non-trivial types can't be used as aruguments of LOG_ERROR and
ASSERT_WITH_MESSAGE.

* DefaultPolicyDelegate.cpp:
(DefaultPolicyDelegate::unableToImplementPolicyWithError): Apply
static_cast<BSTR> to convert BString.
* WebLocalizableStrings.cpp:
(copyLocalizedStringFromBundle): Convert 'key' from WTF::String to
char* by using 'key.utf8().data()'.

Canonical link: https://commits.webkit.org/204655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236099 268f45cc-cd09-0410-ab3c-d52691b4dbfc